# sales-dashboard

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 20260712_0001_initial_schema.py
database/: README.md
datasets/: manifest.example.yaml
docs/: README.md  business-requirements.md  coding-conventions.md  dashboard-design.md  data-contracts.md  data-visualization.md  database-design.md  development-roadmap.md  erd.mmd  etl-design.md  folder-structure.md  functional-requirements.md  non-functional-requirements.md  phase1-scaffold-notes.md  python-architecture.md  reporting-design.md  seed-data-design.md  sql-roadmap.md  testing-plan.md
scripts/: quality.sh
sql/: README.md  metrics.md
sql/advanced/: A01_monthly_revenue_cte.sql  A02_multi_cte_profit_report.sql  A03_filter_cte_then_join.sql  A04_category_tree_recursive.sql  A05_employee_hierarchy.sql  A06_region_hierarchy_path.sql  A07_hierarchy_depth_levels.sql  A08_row_number_products_by_price.sql  A09_top_product_per_category.sql  A10_rank_stores_by_revenue.sql  A11_dense_rank_employees.sql  A12_ntile_customer_quartiles.sql  A13_top3_products_per_store.sql  A14_rank_within_month.sql  A15_running_total_revenue.sql  A16_running_total_per_store.sql  A17_moving_avg_7day_revenue.sql  A18_mom_revenue_change.sql  A19_next_month_revenue.sql  A20_yoy_lag12_monthly.sql  A21_first_order_date_per_customer.sql  A22_last_order_date_per_customer.sql  A23_percent_of_total_revenue.sql  A24_cume_dist_products.sql  A25_percent_rank_products.sql  A26_repeat_purchase_flag.sql  A27_days_between_orders.sql  A28_order_sequence_per_customer.sql  A29_best_selling_day_of_week.sql  A30_contribution_margin_rank.sql  A31_inventory_vs_sales_velocity.sql  A32_promo_vs_nonpromo_aov.sql  A33_return_rate_by_product.sql  A34_payment_completion_lag.sql  A35_deduplicate_keep_latest.sql
sql/basic/: B01_list_active_products.sql  B02_customers_in_city.sql  B03_orders_on_a_date.sql  B04_high_value_orders.sql  B05_sort_products_by_price.sql  B06_top10_expensive_products.sql  B07_distinct_payment_methods.sql  B08_distinct_customer_cities.sql  B09_search_product_by_name.sql  B10_search_email_domain.sql  B11_orders_in_date_range.sql  B12_products_price_band.sql  B13_orders_selected_stores.sql  B14_orders_by_status_set.sql  B15_null_email_customers.sql  B16_nonnull_phone_customers.sql  B17_column_aliases.sql  B18_computed_line_preview.sql  B19_employee_full_name.sql  B20_date_parts_extract.sql  B21_active_stores.sql  B22_exclude_cancelled_orders.sql  B23_pagination_pattern.sql  B24_order_by_multiple.sql  B25_case_insensitive_code.sql
sql/optimization/: O01_explain_revenue_by_store.sql  O02_explain_analyze_revenue_by_store.sql  O03_seq_vs_index_scan.sql  O04_index_on_order_date.sql  O05_composite_store_date.sql  O06_composite_status_date.sql  O07_index_order_items_product.sql  O08_covering_index_concept.sql  O09_avoid_select_star.sql  O10_sargability.sql  O11_join_order_filter_fact_first.sql  O12_cte_materialization_notes.sql  O13_partial_index_low_stock.sql  O14_analyze_vacuum_checklist.sql  O15_having_vs_subquery_rewrite.sql  notes.md
sql/reporting/: R01_revenue_overall.sql  R02_profit_overall.sql  R03_gross_margin_by_category.sql  R04_top_products_by_revenue.sql  R05_top_products_by_profit.sql  R06_top_customers_by_revenue.sql  R07_top_employees_by_revenue.sql  R08_top_stores_by_revenue.sql  R09_sales_by_category.sql  R10_sales_by_brand.sql  R11_sales_by_region.sql  R12_sales_by_store.sql  R13_sales_by_month.sql  R14_sales_by_quarter.sql  R15_sales_by_year.sql  R16_sales_by_day_of_week.sql  R17_aov_overall.sql  R18_aov_by_store.sql  R19_customer_lifetime_value.sql  R20_repeat_customer_rate.sql  R21_abc_analysis_products.sql  R22_pareto_80_20.sql  R23_rfm_raw_scores.sql  R24_rfm_segments.sql  R25_cohort_retention.sql  R26_sales_trend_mom.sql  R27_new_vs_returning_customers.sql  R28_payment_method_share.sql  R29_returns_rate_by_category.sql  R30_net_revenue_after_returns.sql
src/app/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py
(+129 files in other folders)
